--- a/ClientAgent/WebServer/web/Login2.css
+++ b/ClientAgent/WebServer/web/Login2.css
@@ -1,14 +1,14 @@
 @charset "utf-8";
 /* CSS Document */
 html{   
-    width: 100%;   
-    height: 100%;   
+    width: 160px;   
+    height:  320px; 
     overflow: hidden;   
     font-style: sans-serif;   
 }   
 body{   
-    width: 100%;   
-    height: 100%;   
+    /*width: 160px;   
+    height: 320px; */  
     font-family: 'Open Sans',sans-serif;   
     margin: 0;   
     background-color: #4A374A;   
@@ -17,7 +17,7 @@ body{
     position: absolute;   
     top: 50%;   
     left:50%;   
-    margin: -150px 0 0 -150px;   
+    margin: -150px 0 0 -150px;
     width: 300px;   
     height: 300px;  
 }   
@@ -55,6 +55,19 @@ input{
     display: block;   
     background-color: #4a77d4;   
     border: 1px solid #3762bc;   
+    color: #fff;   
+    padding: 9px 14px;   
+    font-size: 15px;   
+    line-height: normal;   
+    border-radius: 5px;   
+    margin: 0;   
+}  
+.but2{   
+    width: 300px;   
+    min-height: 20px;   
+    display: block;   
+    background-color:#414F84;   
+    border: 1px solid #414F84;   
     color: #fff;   
     padding: 9px 14px;   
     font-size: 15px;   
